--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,13 @@ spring.jpa.open-in-view= true
 
 # THYMELEAF
 spring.thymeleaf.cache= false
+
+#JAVAMAIL
+spring.mail.host= smtp.gmail.com
+spring.mail.port= 587
+spring.mail.username= seu.email@gmail.com
+spring.mail.password= *****
+spring.mail.properties.mail.smtp.auth= true
+spring.mail.properties.mail.smtp.starttls.enable= true
+spring.mail.properties.mail.smtp.ssl.trust= smtp.gmail.com
+spring.mail.test-connection= true
