--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.thymeleaf.cache= false
 #JAVAMAIL
 spring.mail.host= smtp.gmail.com
 spring.mail.port= 587
-spring.mail.username= seu.email@gmail.com
+spring.mail.username= seuemail@gmail.com
 spring.mail.password= *****
 spring.mail.properties.mail.smtp.auth= true
 spring.mail.properties.mail.smtp.starttls.enable= true
