--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,11 +12,16 @@ spring.jpa.open-in-view= true
 # THYMELEAF
 spring.thymeleaf.cache= false
 
+# invalida a sessão depois de X tempo de inatividade
+server.servlet.session.timeout=1m
+
+
+
 #JAVAMAIL
 spring.mail.host= smtp.gmail.com
 spring.mail.port= 587
 spring.mail.username= seuemail@gmail.com
-spring.mail.password= *****
+spring.mail.password= ******
 spring.mail.properties.mail.smtp.auth= true
 spring.mail.properties.mail.smtp.starttls.enable= true
 spring.mail.properties.mail.smtp.ssl.trust= smtp.gmail.com
