--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,7 @@ server.servlet.session.timeout=1m
 spring.mail.host= smtp.gmail.com
 spring.mail.port= 587
 spring.mail.username= seuemail@gmail.com
-spring.mail.password= ******
+spring.mail.password= *****
 spring.mail.properties.mail.smtp.auth= true
 spring.mail.properties.mail.smtp.starttls.enable= true
 spring.mail.properties.mail.smtp.ssl.trust= smtp.gmail.com
